--- a/src/components/editor/propertyPredicateView.html
+++ b/src/components/editor/propertyPredicateView.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-12">
       <h4 class="pull-left" translate>Reusable predicate information</h4>
-      <button-with-options icon-class="fa fa-repeat" options="ctrl.changeActions" class="pull-right" disabled="!ctrl.property.inUnstableState"></button-with-options>
+      <button-with-options ng-show="ctrl.isEditing()" icon-class="fa fa-repeat" options="ctrl.changeActions" class="pull-right" disabled="!ctrl.property.inUnstableState"></button-with-options>
     </div>
   </div>
 
