--- a/src/components/navigation/navigationBar.html
+++ b/src/components/navigation/navigationBar.html
@@ -13,11 +13,11 @@
       <a ng-click="ctrl.language = language.code">{{language.name}}</a>
     </li>
 
-    <li ng-if="!ctrl.getUser().isLoggedIn()">
+    <li ng-if="ctrl.getUser().anonymous">
       <a id="login" ng-click="ctrl.openLogin()" translate>Login</a>
     </li>
 
-    <li ng-if="ctrl.getUser().isLoggedIn()">
+    <li ng-if="!ctrl.getUser().anonymous">
       <div class="btn-group navbar-btn" uib-dropdown is-open="status.isopen">
         <button class="btn btn-default navbar-btn" uib-dropdown-toggle>{{ctrl.getUser().name}} <span class="caret"></span></button>
         <ul class="dropdown-menu" role="menu">
