--- a/src/components/editor/selectionView.html
+++ b/src/components/editor/selectionView.html
@@ -1,5 +1,6 @@
 <div class="component">
-  <div float selection-float-size-adjuster show="ctrl.show" width="ctrl.editableController.width">
+  <!-- FIXME: float temporarily disabled -->
+  <div show="ctrl.show" width="ctrl.editableController.width">
     <div class="component-header">
       <h3>
         <span ng-class="ctrl.editableController.getEditable().glyphIconClass"></span>
