Fix variable reference

--- a/src/app/components/frontPage.html
+++ b/src/app/components/frontPage.html
@@ -50,7 +50,7 @@
 
         <div class="row">
           <div class="col-md-12">
-            <div class="model" ng-repeat="model in $ctrl.filteredModels" ng-click="$ctrl.selectModel(filteredModel)">
+            <div class="model" ng-repeat="model in $ctrl.filteredModels" ng-click="$ctrl.selectModel(model)">
 
               <span class="name">{{model.label | translateValue}}</span>
 
