--- a/src/app/components/form/modelLanguageChooser.html
+++ b/src/app/components/form/modelLanguageChooser.html
@@ -1,8 +1,13 @@
-<div class="btn-group left" uib-dropdown is-open="status.isOpen">
-  <button id="single-button" type="button" class="btn btn-default" uib-dropdown-toggle ng-disabled="disabled">
-    {{ctrl.localizeLanguageName(ctrl.language)}} <span class="caret"></span>
+<div uib-dropdown>
+  <button class="btn btn-language" id="dropdownFilterLanguage" uib-dropdown-toggle>
+    {{ctrl.localizeLanguageName(ctrl.language)}}
   </button>
-  <ul class="dropdown-menu" role="menu">
-    <li role="menuitem" ng-repeat="language in ctrl.context.language track by language"><a ng-click="ctrl.language = language">{{ctrl.localizeLanguageName(language)}}</a></li>
-  </ul>
+  <div uib-dropdown-menu aria-labelledby="dropdownFilterLanguage">
+    <button ng-repeat="option in ctrl.context.language"
+            ng-class="{active: option === ctrl.language}"
+            class="dropdown-item"
+            ng-click="ctrl.language = option">
+      {{ctrl.localizeLanguageName(option)}}
+    </button>
+  </div>
 </div>
