Advanced search enabled again and styles fixed

--- a/src/app/components/frontPage.html
+++ b/src/app/components/frontPage.html
@@ -6,8 +6,9 @@
         <input class="form-control"
                type="text"
                ng-model="$ctrl.search"
-               placeholder="{{'Search' | translate}}"/>
+               placeholder="{{'Search' | translate}}" />
       </div>
+      <a href="#" ng-click="$ctrl.openAdvancedSearch()" translate>Advanced search</a>
     </div>
   </div>
 
