--- a/src/app/components/advancedSearchModal.html
+++ b/src/app/components/advancedSearchModal.html
@@ -1,37 +1,66 @@
-<modal-template>
-  <modal-title translate>Advanced search</modal-title>
+<div class="modal-header">
+  <h4 class="modal-title">
+    <a><i ng-click="$dismiss('cancel')" class="fa fa-times"></i></a>
+    <span translate>Advanced search</span>
+  </h4>
+</div>
 
-  <modal-body class="full-height">
-    <div class="row">
-      <div class="col-md-6">
+<div class="modal-body full-height">
 
-        <model-language-chooser context="ctrl.context"></model-language-chooser>
+  <div class="row mb-2">
+    <div class="col-12">
+      <text-filter class="pull-left"
+                   search-text="ctrl.searchText"
+                   search-controller="ctrl"
+                   content-extractors="ctrl.contentExtractors"
+                   placeholder="'Search'"></text-filter>
 
-        <text-filter search-text="ctrl.searchText" search-controller="ctrl" content-extractors="ctrl.contentExtractors" placeholder="'search descriptions'"></text-filter>
+      <model-language-chooser class="pull-right" context="ctrl.context"></model-language-chooser>
+    </div>
+  </div>
 
-        <div class="search-panel">
-          <span class="title" translate>Filter results</span>
+  <div class="row mb-2">
+    <div class="col-12">
+      <types-filter search-controller="ctrl"></types-filter>
+    </div>
+  </div>
 
-          <types-filter search-controller="ctrl"></types-filter>
-        </div>
-      </div>
+  <div class="row full-height">
+    <div class="col-12">
+      <div class="content-box">
+        <div class="search-results">
 
-      <div class="col-md-6 search-results">
-        <div ng-show="ctrl.searchText && ctrl.searchResults.length === 0" translate>No search results</div>
-        <div ng-repeat="searchResult in ctrl.searchResults track by searchResult.id"
-             class="search-result" ng-click="ctrl.selectSearchResult(searchResult)" key-control-selection>
-          <div><i ng-class="searchResult.glyphIconClass"></i><h5><highlight text="searchResult.label" context="ctrl.context" search="ctrl.searchText"></highlight></h5></div>
-          <p><highlight text="searchResult.comment" context="ctrl.context" search="ctrl.searchText"></highlight></p>
-          <div class="origin">
-            <span class="pull-left">{{searchResult.definedBy | translateLabel: ctrl.context}}</span>
-            <span class="pull-right" ng-bind-html="searchResult.id.compact | highlight: ctrl.searchText"></span>
+          <div ng-show="ctrl.searchText && ctrl.searchResults.length === 0" translate>No search results</div>
+
+          <div ng-repeat="searchResult in ctrl.searchResults track by searchResult.id"
+               class="search-result"
+               ng-click="ctrl.selectSearchResult(searchResult)"
+               key-control-selection>
+
+            <div class="content" ng-class="{last: last}">
+
+                <span class="title">
+                  <i ng-class="searchResult.glyphIconClass"></i>
+                  <highlight text="searchResult.label" context="ctrl.context" search="ctrl.searchText"></highlight>
+                </span>
+
+              <span class="body">
+                  <highlight text="searchResult.comment" context="ctrl.context" search="ctrl.searchText"></highlight>
+                </span>
+
+              <div class="origin">
+                <span class="pull-left">{{searchResult.definedBy | translateLabel: ctrl.context}}</span>
+                <span class="pull-right" ng-bind-html="searchResult.id.compact | highlight: ctrl.searchText"></span>
+              </div>
+            </div>
           </div>
+
         </div>
       </div>
     </div>
-  </modal-body>
+  </div>
+</div>
 
-  <modal-buttons>
-    <button type="button" class="btn btn-default cancel" ng-click="ctrl.close()" translate>Cancel</button>
-  </modal-buttons>
-</modal-template>
+<div class="modal-footer">
+  <button type="button" class="btn btn-link cancel" ng-click="ctrl.close()" translate>Cancel</button>
+</div>
