--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -122,6 +122,46 @@ input[type=checkbox][disabled] + span {
   }
 }
 
+.input-group.input-group-search {
+
+  position: relative !important;
+
+  .form-control {
+    padding-right: 3rem !important;
+
+    &:focus {
+      outline: 0 none;
+    }
+  }
+
+  &:before {
+    color: $gray-600;
+    content: $fa-var-search;
+    font-family: FontAwesome;
+    top: 10px;
+    right: 15px;
+    font-size: $font-size-lg;
+    position: absolute;
+    z-index: 10;
+  }
+}
+
+.modal-body {
+  .input-group-search {
+    width: 400px;
+  }
+
+  .content-box {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+  }
+
+  .search-results, form {
+    height: 100%;
+    overflow-y: auto;
+  }
+}
 
 
 [float] {
@@ -841,10 +881,6 @@ ajax-loading-indicator-small {
   }
 }
 
-.fa-user, .fa-users {
-  margin-right: 15px;
-}
-
 .model-header {
   @extend .main-header;
   cursor: pointer;
@@ -893,113 +929,6 @@ ajax-loading-indicator-small {
 
   .alert {
     clear: both;
-  }
-}
-
-.origin {
-  font-size: x-small;
-  border-top: #dddddd solid 1px;
-  margin: 0 10px 0 0;
-  width: calc(100% - 10px);
-  display: inline-block;
-}
-
-modal-body {
-
-  .empty-message {
-    padding: 3px 20px;
-    a {
-      cursor: pointer;
-    }
-  }
-
-  .tt-menu {
-    max-height: 400px;
-    overflow-y: auto;
-  }
-
-  .details {
-    font-size: x-small;
-  }
-
-  > p {
-    max-width: 600px;
-  }
-
-  .input-group {
-    width: 100%;
-    padding-bottom: 20px;
-  }
-
-  textarea {
-    height: 118px;
-  }
-
-  .search-selection {
-    overflow-y: auto;
-  }
-
-  .search-results {
-
-    .search-result {
-      font-size: small;
-      cursor: pointer;
-      border: 1px solid $light;
-      margin-bottom: 10px;
-      padding-left: 10px;
-      box-shadow: 2px 2px 2px $light;
-
-      &.add-new {
-        color: white;
-        background-color: $light;
-        border: 1px solid $dark;
-      }
-
-      &.disabled {
-        background-color: whitesmoke;
-        color: #a5a5a5;
-        cursor: not-allowed;
-      }
-
-      &.selected {
-        color: inherit;
-        background-color: $light;
-        border: 1px solid $dark;
-        box-shadow: 2px 2px 2px $dark;
-      }
-
-      &.selection {
-        border: 1px solid black;
-        box-shadow: 2px 2px 2px black;
-      }
-
-      i {
-        float: right;
-        padding: 5px;
-        line-height: 5px;
-      }
-    }
-  }
-}
-
-modal-body {
-
-  display: inline-block;
-  position: relative;
-  width: 100%;
-
-  &.full-height {
-    height: calc(100vh - 250px);
-
-    > div.row {
-
-      height: 100%;
-
-      > div.col-md-4, div.col-md-6, div.col-md-12 {
-        height: 100%;
-        overflow-y: auto;
-      }
-    }
   }
 }
 
